2017-03-18  Bruno Haible  <bruno@clisp.org>

	Make --enable-portability enable support for any kind of address space.
	* lispbibl.d: Obey flag NO_ADDRESS_SPACE_ASSUMPTIONS. It has the effect
	to enable WIDE_SOFT on 32-bit platforms and disable SINGLEMAP_MEMORY,
	TYPECODES, TRIVIALMAP_MEMORY, CAN_ALLOCATE_8BIT_VECTORS_ON_C_STACK,
	CAN_ALLOCATE_STRINGS_ON_C_STACK.
	* makemake.in (XCFLAGS): Add -DNO_ADDRESS_SPACE_ASSUMPTIONS if
	--enable-portability is specified.

2017-03-18  Bruno Haible  <bruno@clisp.org>

	Avoid code duplication of a condition.
	* lispbibl.d (CAN_ALLOCATE_8BIT_VECTORS_ON_C_STACK,
	CAN_ALLOCATE_STRINGS_ON_C_STACK): New macros.
	(_SP_before_suspend, SET_SP_BEFORE_SUSPEND): Use them.
	* spvw_global.d (is_valid_stack_address): Likewise.
	* constobj_tl.d: Likewise.

2017-03-17  Bruno Haible  <bruno@clisp.org>

	Update to the newest gnulib.
	Ran "make -f Makefile.devel build-aux-update gnulib-imported
	build-prerequisites".
	* gllib/*: Update from gnulib.
	* glm4/*: Likewise.
	* aclocal.m4, src/configure: Regenerated.

2017-03-17  Bruno Haible  <bruno@clisp.org>

	Fix build failures with --with-debug on NetBSD.
	* unix.d: Include <sys/ioctl.h> always. Needed to get ioctl() declared.
	* foreign.d (FOREIGN-POINTER-INFO): Cast dli.dli_saddr, possibly a
	'const void *', to 'void *'.
	* lispbibl.d (dotimes_called_with_count_of_wrong_size): Export to
	clisp.h.

2017-03-17  Bruno Haible  <bruno@clisp.org>

	Don't test unportable features in "make check".
	* makemake.in: Generate a new target 'extracheck'. Let 'extracheck', not
	'check', depend on 'check-exec-image'.

2017-03-17  Bruno Haible  <bruno@clisp.org>

	Fix build failure on Linux/arm.
	* arilev0.d (mulu32_, divu_3216_1616_, divu_3216_3216_, divu_3232_3232_,
	divu_6432_3232_, divu_6432_6432_, divu_6464_6464_): When defined in
	lisparit.o, add a suffix to the symbol. This avoids a link-time
	collision with ari*.o.

2017-03-16  Bruno Haible  <bruno@clisp.org>
