@@ -1,3 +1,12 @@
+2017-03-19  Bruno Haible  <bruno@clisp.org>
+
+	Update to the newest gnulib.
+	Ran "make -f Makefile.devel build-aux-update gnulib-imported
+	build-prerequisites".
+	* gllib/*: Update from gnulib.
+	* glm4/*: Likewise.
+	* aclocal.m4, src/configure: Regenerated.
+
 2017-03-18  Bruno Haible  <bruno@clisp.org>
 
 	Make --enable-portability enable support for any kind of address space.
